--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,7 +7,7 @@
   height: 100vh;
   width: 100vw;
   background-color: #f9fbff;
-  font-family: "Poppins", sans-serif;
+  font-family: "SF Pro Display", "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", "Inter", "Poppins", sans-serif;
   overflow: hidden;
 }
 
